# ColdQuery

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.deps  GEMINI.md  Gemini.md  INSTRUCTIONS.md  README.md  STATUS.md  TODO.md  claude.md  docker-compose.deploy.yml  gemini.md  package-lock.json  package.json  pyproject.toml  serve-config.json  tailscale-entrypoint.sh  vitest.config.ts
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  deploy.yml
coldquery/: app.py  dependencies.py  server.py
coldquery/core/: context.py  executor.py  logger.py  mcp.py  session.py
coldquery/middleware/: session_echo.py
coldquery/prompts/: analyze_query.py  debug_locks.py
coldquery/resources/: monitor_resources.py  schema_resources.py
coldquery/security/: access_control.py  auth.py  identifiers.py
coldquery/tools/: pg_admin.py  pg_monitor.py  pg_query.py  pg_schema.py  pg_tx.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  OBSERVATIONS.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  PR_29_REVIEW.md  TAILSCALE_SERVICES.md  architecture.md
docs/archive/: PHASE_3_PLAN.md
docs/plans/: mcp-protocol-tests.md
docs/playbooks/: pgedge-mcp-setup.md
docs/reports/: 2026-02-01-deployment-investigation.md  2026-02-05-pgedge-comparison.md
scripts/: debug_server.py
shared/executor/: interface.ts  postgres.ts
shared/security/: identifiers.ts
tests/: conftest.py  conftest_testcontainers.py  live_test.py
tests/e2e/: test_http_transport.py  test_mcp_e2e.py
tests/integration/: conftest.py  test_concurrency.py  (+5 more)
(+25 files in other folders)
