[project]
name = "coldquery"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0b1",
    "asyncpg>=0.30.0",
    "pydantic>=2.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "pytest-mock>=3.14", "ruff>=0.8", "mypy>=1.13", "pre-commit>=4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "build", "dist", ".git", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modern Python syntax)
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastMCP DI)
]

[tool.ruff.lint.isort]
known-first-party = ["coldquery"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false

[tool.setuptools.packages.find]
include = ["coldquery*"]
exclude = ["tests*"]
